--- a/main.css
+++ b/main.css
@@ -1,6 +1,23 @@
-/* .box {
+.box {
     border: 1px solid 
-} */
+
+}
+
+.nav-link {
+    /* font-size: 0.8rem; */
+}
+input.search{
+    /* height: 2rem; */
+    border-radius: 50px;
+    border: 1px solid #4A9ADE;
+}
+
+.fa-search {
+    position: absolute;
+    right: 10px;
+    color: gray;
+}
+
 
 .top-right a {
   color: black;
