--- a/main.css
+++ b/main.css
@@ -1,10 +1,21 @@
+body {
+  background: black;
+  color: white;
+}
+
+body {
+background-image: url('https://images5.alphacoders.com/423/thumb-1920-423529.jpg');
+background-repeat: no-repeat;
+background-position: center center;
+background-size: cover;
+} 
 /* color: #E6F5FE; */
 .panel-color {
-  background-color: #e6f5fe;
+  background-color: black;
 }
 
 .panel-body {
-  background-color: white;
+  background-color:black;
 }
 
 .border-3 {
@@ -47,10 +58,12 @@
     border: 1px solid 
 
 }
-
+.navbar {
+  background-color: black;
+}
 .nav-link {
     /* font-size: 0.8rem; */
-    color: #009EF6;
+    color: #E7E1D2;
 }
 .navbar-brand {
   color: rgb(20, 39, 187);
@@ -98,7 +111,8 @@ input.search{
 }
 
 .tw-color {
-  background-color: lightcyan;
+  background-color: black;
+  color: #E7E1D2;
 }
 .bot-right a {
   color: #4da8c3;
