--- a/main.css
+++ b/main.css
@@ -22,6 +22,9 @@ background-size: cover;
   border-width: 3px !important;
   color: gray;
 }
+.text-gray {
+  color: gray !important;
+}
 
 .tw-fa {
   color: grey;
