--- a/main.css
+++ b/main.css
@@ -1,15 +1,15 @@
 
 
 body {
-background-color: black !important;
+background-color: rgb(1, 11, 29) !important;
 } 
 /* color: #E6F5FE; */
 .panel-color {
-  background-color: black;
+  background-color: black !important;
 }
 
 .panel-body {
-  background-color:black;
+  background-color: black;
 }
 
 .border-3 {
@@ -77,8 +77,12 @@ input.search{
     color: gray;
 }
 
+.top-right {
+  background-color: black;
+}
 .top-right a {
   color: black;
+  
 }
 .top-right a:hover {
   color: black;
